# mkits

./: .clang-format  .clang-tidy  .editorconfig  .gitignore  .pre-commit-config.yaml  CMakeLists.txt  CPPLINT.cfg  LICENSE  README.md  build.sh  build_clang.sh  build_coverage.sh  build_gcc.sh  build_gcc_release.sh  build_windows.bat  run_clangtidy.sh  run_cppcheck.sh  run_cppcheck_more.sh  run_cpplint.sh
apps/Calc24point/: CMakeLists.txt
apps/Calc24point/Calc24Client/: TCPClient.cpp  TCPClient.h  main.cpp
apps/Calc24point/Calc24Server/: Calc24Server.cpp  Calc24Server.h  Calc24Session.cpp  Calc24Session.h  Desk.h  Player.cpp  Player.h  TCPServer.cpp  TCPServer.h  main.cpp
apps/Calc24point/common/: msg.h
apps/Calc24point/net/: Acceptor.cpp  Acceptor.h  ByteBuffer.cpp  ByteBuffer.h  Epoll.cpp  Epoll.h  EventLoop.cpp  EventLoop.h  IEventDispatcher.h  IOMultiplex.h  Poll.cpp  Poll.h  Select.cpp  Select.h  TCPConnection.cpp  TCPConnection.h  TCPServer.cpp  TCPServer.h  ThreadPool.cpp  ThreadPool.h
mckits/: CMakeLists.txt  mckits.c  mckits.h  mckits_adt_flowqueue.h  mckits_adt_hashmap.h  mckits_adt_heap.c  mckits_adt_heap.h  mckits_adt_list.h  mckits_adt_mpmcqueue.c  mckits_adt_mpmcqueue.h  mckits_adt_nlist.h  mckits_adt_rbtree.c  mckits_adt_rbtree.h  mckits_adt_ring.c  mckits_adt_ring.h  mckits_adt_skiplist.h  mckits_array.c  mckits_array.h  mckits_crc.h  mckits_encoding_base32.c  mckits_encoding_base32.h  mckits_encoding_base64.c  mckits_encoding_base64.h  mckits_encoding_binary.h  mckits_encoding_hex.c  mckits_encoding_hex.h  mckits_encoding_iniparser.h  mckits_encoding_json.h  mckits_encoding_toml.c  mckits_encoding_toml.h  mckits_endian.h  mckits_hash_fnv.c  mckits_hash_fnv.h  mckits_hash_murmur.c  mckits_hash_murmur.h  mckits_mfile.c  mckits_mfile.h  mckits_mlog.c  mckits_mlog.h  mckits_mos.c  (+17 more)
mckits/core/: mckits_adt_flowqueue.h  mckits_adt_hashmap.h  mckits_adt_heap.h  mckits_adt_list.h  mckits_adt_nlist.c  mckits_adt_nlist.h  mckits_adt_rbtree.h  mckits_adt_ring.h  mckits_adt_skiplist.h  mckits_atomic.h  mckits_core_utils.c  mckits_crc.h  mckits_encoding_base32.h  mckits_encoding_binary.h  mckits_encoding_hex.c  mckits_encoding_hex.h  mckits_encoding_iniparser.c  mckits_endian.c  mckits_hash_fnv.c  mckits_hash_fnv.h  mckits_mlog.c  mckits_mlog.h  mckits_mrandom.h  mckits_msock.c  mckits_msock.h  mckits_mtime.c  mckits_rawpipe.c  mckits_strconv.c  mckits_strconv.h  mckits_utils.h
mckits/core/base/: mckits_array.h  mckits_string.h
mckits/core/encoding/: mckits_encoding_base32.h  mckits_encoding_base64.h  mckits_encoding_binary.c  mckits_encoding_binary.h  mckits_encoding_hex.c  mckits_encoding_hex.h  mckits_encoding_iniparser.h  mckits_encoding_json.c  mckits_encoding_json.h  mckits_encoding_toml.h  mckits_endian.h
mckits/core/hash/: mckits_hash_fnv.h  mckits_hash_murmur.h
mckits/core/queue/: mckits_adt_flowqueue.c  mckits_adt_flowqueue.h  mckits_adt_mpmcqueue.h
mckits/core/thread/: mckits_atomic.h  mckits_rwlock.h  mckits_rwlockp.h
mckits/mlibc/: mckits_cwrap.c  mckits_cwrap.h  mckits_mlibc_utils.c  mckits_mlibc_utils.h
mckits/mstl/: mckits_adt_hashmap.c  mckits_adt_hashmap.h  mckits_adt_heap.h  mckits_adt_list.c  mckits_adt_list.h  mckits_adt_nlist.h  mckits_adt_rbtree.c  mckits_adt_rbtree.h  mckits_adt_ring.c  mckits_adt_ring.h  mckits_adt_skiplist.c  mckits_adt_skiplist.h  mckits_config.h  mckits_hashmap.c  mckits_hashmap.h  mckits_hashset.c  mckits_hashset.h  mckits_heap.c  mckits_heap.h  mckits_list.c  mckits_malloc.c  mckits_malloc.h  mckits_mstl_utils.c  mckits_mstl_utils.h  mckits_nlist.c  mckits_rbtree.c  mckits_ring.c  mckits_ring.h  mckits_skiplist.c  mckits_string.c  mckits_string.h  mckits_vecdeque.c  mckits_vecdeque.h  mckits_vector.c  mckits_vector.h
mckits/mstl/hash/: mckits_hash_murmur.c  mckits_hash_murmur.h  mckits_hash_sip.c  mckits_hash_sip.h  mckits_hash_xxhash.c  mckits_hash_xxhash.h
mckits/platform/: mckits_mfile.c  mckits_mos.h  mckits_thread.c  mckits_thread.h
mcppkits/: CMakeLists.txt  mcppkits.cpp  mcppkits.h  mcppkits_fixed_size_string.hpp  mcppkits_fps.cpp  mcppkits_fps.h  mcppkits_strutils.cpp
src/mckits/: CMakeLists.txt  mckits.c
src/mckits/core/: mckits_core_utils.c  mckits_daemon.c  mckits_mfile.c  mckits_mlog.c  mckits_mos.c  mckits_mrandom.c  mckits_msock.c  mckits_mtime.c  mckits_rawpipe.c  mckits_socket_poller.c  mckits_socket_poller_epoll.c  mckits_socket_poller_kqueue.c  mckits_strconv.c  mckits_thread.c
src/mckits/mlibc/: mckits_cwrap.c  mckits_malloc.c  mckits_mlibc_utils.c
src/mckits/mstl/: mckits_array.c  mckits_hashmap.c  mckits_hashset.c  mckits_heap.c  mckits_list.c  mckits_nlist.c  mckits_rbtree.c  mckits_ring.c  mckits_skiplist.c  (+4 more)
src/mcppkits/: CMakeLists.txt  mcppkits.cpp  mcppkits_async_log.cpp  mcppkits_config_file_reader.cpp  mcppkits_count_down_latch.cpp  mcppkits_fileutils.cpp  mcppkits_md5.cpp  mcppkits_random.cpp  mcppkits_strutils.cpp  mcppkits_uuid.cpp
test/mckits/: CMakeLists.txt  test_adt_mpmcqueue.c  test_daemon.c  test_encoding_binary.c  test_encoding_binary_02.c  test_err_log.c  test_iniparser.c  test_log.c  test_mfile.c  test_mos.c  test_mpmcqueue.c  test_mrandom.c  test_mtime.c  test_rawpipe.c  test_sockpair.c  test_thread.c  test_thread_02.c  unittest_adt_flowqueue.c  unittest_adt_heap.c  unittest_adt_list.c  unittest_adt_mpmcqueue.c  unittest_adt_nlist.c  unittest_adt_ring.c  unittest_array.c  unittest_crc.c  unittest_encoding_binary.c  unittest_encoding_hex.c  unittest_endian.c  unittest_flowqueue.c  unittest_hash_fnv.c  unittest_hash_murmur.c  unittest_hash_sip.c  unittest_hash_xxhash.c  unittest_hashmap.c  unittest_hashmap02.c  unittest_hashmap03.c  unittest_hashset.c  unittest_heap.c  unittest_iniparser.c  unittest_list.c  (+13 more)
test/mcppkits/: CMakeLists.txt  test_count_down_latch.cpp  test_defer.cpp  test_uuid.cpp  unittest_config_file_reader.cpp  unittest_count_down_latch.cpp  unittest_fixed_size_string.cpp  unittest_list_queue.cpp  unittest_md5.cpp  unittest_raii_wrapper.cpp  unittest_random.cpp  unittest_singleton.cpp  unittest_singletonp.cpp  unittest_uuid.cpp
(+108 files in other folders)
