file(GLOB SOURCES "*.c")
foreach(SOURCE ${SOURCES})
	get_filename_component(EXECUTABLE_NAME ${SOURCE} NAME_WE)
	add_executable(${EXECUTABLE_NAME} ${SOURCE})
	target_link_libraries(${EXECUTABLE_NAME} PRIVATE mckits m dl rt)
  target_compile_options(${EXECUTABLE_NAME} PRIVATE -pthread)
  target_link_options(${EXECUTABLE_NAME} PRIVATE -pthread)
endforeach()
